Commented various classes. Improved code readability. Fixed a lot of formatting.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /EvonyCommonCustom/build/
 /EvonyCommands/build/
 /EvonyProxy/build/
+/EvonyConnectors/nbproject/private/
+/EvonyCommands/nbproject/private/
+/EvonyGameCommons/nbproject/private/
+/EvonyCommonCustom/nbproject/private/
+/EvonyProxy/nbproject/private/
